# practice-bazel

./: .gitignore
bzlmod/: BUILD.bazel  MODULE.bazel  Makefile  README.md  go.mod
bzlmod/cmd/: BUILD.bazel  main.go
proto/: BUILD.bazel  Makefile  WORKSPACE  deps.bzl  go.mod
proto/proto/: BUILD.bazel  message.pb.go
proto/source/: BUILD.bazel  message.proto
quickstart/: BUILD.bazel  Makefile  WORKSPACE  deps.bzl  go.mod
quickstart/cmd/example1/: BUILD.bazel
quickstart/cmd/example2/: BUILD.bazel  main.go
